Back to the future java 8 Use validation for pipeline props