@@ -13,8 +13,8 @@ configurations {
     }
 }
 
-sourceCompatibility = "1.9"
-targetCompatibility = "1.9"
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
 sourceSets {
     main {
@@ -22,28 +22,4 @@ sourceSets {
         groovy { //noinspection GroovyAssignabilityCheck
             srcDirs = ["src/main/java", "src/main/groovy"] }  // compile   everything in src/ with groovy
     }
-}
-
-compileGroovy {
-    // Allow Groovy to do its grooviness
-    options.forkOptions.jvmArgs << "--add-opens=java.base/java.lang=ALL-UNNAMED"
-    options.forkOptions.jvmArgs << "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
-}
-
-test {
-    jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED",
-               "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-               "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-               "--add-opens=java.base/java.io=ALL-UNNAMED",
-               "--add-opens=java.base/java.util=ALL-UNNAMED",
-               "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-               "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
-               "--add-opens=java.base/java.util.function=ALL-UNNAMED",
-               "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
-               "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
-               "--add-opens=java.base/java.net=ALL-UNNAMED",          
-               "--add-opens=java.base/java.text=ALL-UNNAMED",
-               "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
-               "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED"
-    ]
 }
